Fix sibling collapse add computer node data

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -367,9 +367,6 @@ body {
     margin-top: 5px;
 }
 
-.spinner {
-}
-
 .spinner > div {
   width: 12px;
   height: 12px;
